--- a/FoodBook/src/app/footer/footer.component.html
+++ b/FoodBook/src/app/footer/footer.component.html
@@ -116,8 +116,8 @@
               style="width: 60px; background-color: #7c4dff; height: 2px"
             />
             <p><i class="fa fa-home mr-3"></i> New York, NY 10012, US</p>
-            <p><i class="fa fa-envelope mr-3"></i> whymtr@gmail.com</p>
-            <p><i class="fa fa-phone mr-3"></i> + 91 7782868222</p>
+            <p><i class="fa fa-envelope mr-3"></i> whymlr#email.com</p>
+            <p><i class="fa fa-phone mr-3"></i> + 91 6876727862</p>
             <p><i class="fa fa-print mr-3"></i> + 01 234 567 89</p>
           </div>
           <!-- Grid column -->
